# scDblFinderPy

./: .gitignore  README.md  __init__.py  biocneighbors_kmknn.py  clustering.py  doublet_generation.py  graph.py  hw_kmeans.py  louvain_controlled.py  misc.py  pyproject.toml  r_mt19937.py  r_sample_emulation.py  rng.py  scDblFinder.py  thresholding.py
R/: clustering.R  getFragmentOverlaps.R  misc.R  scDblFinder.R
benchmarking/: python_benchmark_J293t-dm.csv  python_benchmark_hm-12k.csv  python_benchmark_hm-6k.csv  python_benchmark_metrics.csv  python_benchmark_pbmc-1A-dm.csv  python_benchmark_pbmc-1B-dm.csv  python_benchmark_pbmc-ch.csv  python_benchmark_pdx-MULTI.csv  run_dataset.py
